# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("../dsoftbus.gni")
ohos_shared_library("proxychannelmanager") {
  include_dirs = [
    "common/include"
  ]
  sources = [
    "br_proxy_module.c",
    "common/src/softbus_napi_utils.c",
  ]
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  deps = [
    "$dsoftbus_dfx_path:softbus_dfx",
    "$dsoftbus_root_path/adapter:softbus_adapter",
    "$dsoftbus_root_path/br_proxy:br_proxy_utils",
    "$dsoftbus_root_path/core/common:softbus_utils",
    "$dsoftbus_root_path/sdk:softbus_client",
    "$dsoftbus_root_path/core/frame:softbus_server",
    "$dsoftbus_dfx_path/dumper/legacy:softbus_dfx_dump"
  ]

  external_deps = [
    "c_utils:utils",
    "bounds_checking_function:libsec_shared",
    "hilog:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module/distributedsched"

  subsystem_name = "communication"
  part_name = "dsoftbus"
}

ohos_shared_library("br_proxy_adapter") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = []
  if (is_standard_system && (!defined(global_parts_info) ||
    defined(global_parts_info.resourceschedule_device_standby))) {
    sources += [
      "br_proxy_adapter.cpp",
    ]
    deps = [
      "$dsoftbus_dfx_path:softbus_dfx",
    ]
    external_deps = [
      "c_utils:utils",
      "ability_runtime:ability_connect_callback_stub",
      "ability_runtime:ability_manager",
      "bundle_framework:appexecfwk_base",
      "bundle_framework:appexecfwk_core",
      "ipc:ipc_single",
      "samgr:samgr_proxy",
      "resource_schedule_service:ressched_client",
      "device_standby:standby_innerkits",
    ]
  } else {
    sources += [ "br_proxy_adapter_virtual.cpp" ]
  }

  include_dirs = [
    "$dsoftbus_root_path/interfaces/kits/common",
  ]
  subsystem_name = "communication"
  part_name = "dsoftbus"
}

ohos_shared_library("br_proxy_utils") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "br_proxy_session_manager.c",
    "common/src/br_proxy_error_code.c",
  ]

  deps = [
    "$dsoftbus_dfx_path:softbus_dfx",
    "$dsoftbus_root_path/adapter:softbus_adapter",
    "$dsoftbus_root_path/core/common:softbus_utils",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  include_dirs = [ "common/include" ]
  subsystem_name = "communication"
  part_name = "dsoftbus"
}

group("br_proxy") {
    deps = [
      ":br_proxy_adapter",
      ":br_proxy_utils",
      ":proxychannelmanager",
    ]
}