# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../dsoftbus.gni")
if (dsoftbus_feature_trans_br_proxy == true) {
  br_proxy_sa_sources = [
    "$dsoftbus_root_path/br_proxy/br_proxy_server_manager.c",
    "$dsoftbus_root_path/br_proxy/br_proxy_common.cpp",
    "$dsoftbus_root_path/br_proxy/br_proxy_storage.c",
    "$dsoftbus_root_path/br_proxy/hap_uninstall_observer.cpp",
  ]
} else {
  br_proxy_sa_sources = [
    "$dsoftbus_root_path/br_proxy/br_proxy_server_manager_virtual.c",
  ]
}

br_proxy_sdk_sources = [
    "$dsoftbus_root_path/br_proxy/br_proxy.c",
]

br_proxy_include_dirs = [
    "$dsoftbus_root_path/br_proxy",
]

br_proxy_external_deps = [
    "common_event_service:cesfwk_innerkits",
]