# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

lite_component("softbus_server") {
  features = [
    "connection:softbus_connection",
    "frame/lite:softbus_server_frame",
    "common:softbus_core_common",
    "bus_center:softbus_bus_center",

    "transmission:softbus_server_transmission",
    "adapter/kernel:softbus_adapter_kernel",
    "adapter/bus_center:softbus_adapter_bus_center",
  ]
}
