# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../dsoftbus.gni")

if (defined(ohos_lite)) {
  lite_component("softbus_server") {
    if (ohos_kernel_type == "liteos_m") {
      features = [
        "frame:softbus_server_frame",
        "$dsoftbus_root_path/core/common:softbus_utils",
        "$dsoftbus_root_path/adapter:softbus_adapter",
      ]
    } else {
      features = [ "frame:softbus_server" ]
    }
  }
} else {
  group("softbus_server") {
    deps = [ "frame:softbus_server" ]
  }
}
