# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  if (ohos_kernel_type == "liteos_m") {
    hilog_lite_include_path =
        "//base/hiviewdfx/hilog_lite/interfaces/native/kits"
    hilog_lite_deps_path =
        "//base/hiviewdfx/hilog_lite/frameworks/mini:hilog_lite"
  } else {
    hilog_lite_include_path =
        "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits"
    hilog_lite_deps_path =
        "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared"
  }
  utils_lite_include_path = "//commonlibrary/utils_lite/include"
  if (defined(board_toolchain_type)) {
    if (board_toolchain_type != "iccarm") {
      ohos_lite_cflags = [
        "-ffunction-sections",
        "-fdata-sections",
        "-Os",
        "-Wall",
        "-fPIC",
      ]
    } else {
      ohos_lite_cflags = [
        "--diag_suppress",
        "Pe186",
        "-Os",
      ]
    }
  }
}
