# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/communication/dsoftbus/dsoftbus.gni")

ohos_executable("SoftBusDumpDeviceInfo") {
  sources = [ "device_info/get_device_info.c" ]

  include_dirs = [
    "$dsoftbus_root_path/interfaces/kits/common",
    "$dsoftbus_root_path/interfaces/kits/bus_center",
    "$softbus_adapter_common/include",
  ]

  deps = [ "$dsoftbus_root_path/sdk:softbus_client" ]
  part_name = "dsoftbus"
  subsystem_name = "communication"
}

group("tool") {
  deps = [ ":SoftBusDumpDeviceInfo" ]
}
