# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")

  build_ext_component("dfinder") {
    outdir = rebase_path("$root_out_dir")
    command = "cp libnstackx_ctrl.so libnstackx_util.so ${outdir}"
    if (ohos_kernel_type == "linux") {
      exec_path = rebase_path("./libs/L1/linux")
    } else if (ohos_kernel_type == "liteos_a") {
      exec_path = rebase_path("./libs/L1/liteos_a")
    }
  }
} else {
  import("//build/ohos.gni")

  group("dfinder") {
    public_deps = [
      ":nstackx_util",
      ":ntackx_ctrl",
    ]
  }

  config("dfinder_header") {
    include_dirs = [ "include" ]
  }

  ohos_prebuilt_shared_library("ntackx_ctrl") {
    source = "libs/L2/libnstackx_ctrl.so"
    public_configs = [ ":dfinder_header" ]
    part_name = "softbus_L2"
    subsystem_name = "communication"
  }

  ohos_prebuilt_shared_library("nstackx_util") {
    source = "libs/L2/libnstackx_util.so"
    public_configs = [ ":dfinder_header" ]
    part_name = "softbus_L2"
    subsystem_name = "communication"
  }
}
